deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio-app
  labels:
    app: my-portfolio # 🔧 FIXED to match selector
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      labels:
        app: my-portfolio
    spec:
      containers:
        - name: my-portfolio-app
          image: chandan996/my-portfolio-app
          ports:
            - containerPort: 3000
