service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-portfolio-service
spec:
  type: NodePort
  selector:
    app: my-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
